Fix: overflow

--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,9 @@
    visibility: visible;
  }
 
+ .container {
+   display: flex;
+ }
 
  math-field {
    font-size: 24px;
